# epi-i-backend

./: .gitignore  AGENT.md  CLAUDE.md  Makefile  README.md  main.py  pyproject.toml
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: lifestyles.py  reports.py  seizures.py
app/core/: config.py
app/schemas/: lifestyle.py  seizure.py
